--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@headlessui/react": "1.7",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.7",
+    "muuri": "^0.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "web-animations-js": "^2.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
